# openfpga-instance-packager

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: bin.rs  glob_stuff.rs  instance_packer_json_structs.rs  lib.rs  modname.rs  serde_structs.rs
src/tests/: test_helpers.rs
tests/: integration_test.rs
