[package]
name = "openfpga-instance-packager"
version = "0.2.1"
edition = "2021"

[lib]
name = "instance_packager"
path = "src/lib.rs"

[[bin]]
name = "openfpga_instance_packager"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.91"
glob = "0.3.1"
serde = { version = "1.0.152", features = ["derive"]}
clap = { version = "4.1.4", features = ["derive"]}
question = "0.2.2"
walkdir = "2.3.2"
tempfile = "3.3.0"
